Wed May 30 23:54:27 2001  Yamuna Krishnamurthy  <yamuna@cs.wustl.edu>

	* ace/QoS/SOCK_Dgram_Mcast_QoS.cpp: 

	  Fixed the subscribe method so things worked even when no qos was specified.

Wed May 30 11:13:16 2001  Ossama Othman  <ossama@uci.edu>

	* ace/Singleton.cpp (instance):

	  Integrated David's suggested changes that deal with potential
	  problems related to registering Singletons in the presence of
	  multiple ACE_Object_Manager instances.

Wed May 30 00:37:57 2001  Ossama Othman  <ossama@uci.edu>

	* ace/Singleton.cpp (instance):

	  Fixed memory leak that occured due to the singleton instance not
	  being registered with the ACE_Object_Manager when built without
	  thread support.  Thanks to Kitty and David for helping with
	  this problem.

Tue May 29 15:06:48 2001  Ossama Othman  <ossama@uci.edu>

	* include/makeinclude/platform_linux.GNU (CFLAGS, CPPFLAGS):

	  Do not set preprocessor flags in the "CFLAGS" variable.  They
	  should instead be set in the CPPFLAGS variable.  The
	  preprocessor need not be the same as the compiler!

Mon May 28 18:11:20 2001  Douglas C. Schmidt  <schmidt@enz.cs.wustl.edu>

	* ace/OS.i (mutex_init): Using pthreads and passing attributes
	  into mutex_init(), the function will always fail because the
 	  local variable result is initialized to -1 and then tested
 	  against 0.  Thanks to Brodie Thiesfield
 	  <brodie.thiesfield@activesky.com> for this fix.

Tue May 29 13:08:33 2001  Phil Mesnier  <mesnier_p@ociweb.com>

	* ace/Process.i (handle_inheritence):
	* ace/Process.h:

	Exposed the interface for handle_inheritence to non-win32 builds to
	allow it to be used as part of the solution to bug 902. Since this is
	a win32 only feature, the method will invoke the NOTSUP macro to
	document its use, but failure is benign, returning 0. This is part 3
	of the 3 part solution to bug 902.

Mon May 28 18:43:51 2001  Steve Huston  <shuston@riverace.com>

        * tests/Thread_Pool_Reactor_Resume_Test.icc: Visual Age C++ config